<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    tools:context=".MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/avengers_bg_black">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@drawable/avengers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:background="@drawable/avengers_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_left_arrow"
            android:text="@string/back_button_text"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:textColor="@color/avengers_gray"
            android:textAllCaps="false"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:layout_marginTop="56dp"
            android:layout_marginStart="2dp"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <TextView
            android:id="@+id/age_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            style="@style/WhiteBoldText"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/age_limit"
            android:layout_marginTop="226dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="@+id/age_limit"
            android:layout_marginTop="12dp"
            android:lines="2"
            style="@style/WhiteBoldText"
            android:text="@string/avengers_end_game"/>

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_marginTop="4dp"
            android:textColor="@color/avengers_red"
            android:textSize="14sp"
            android:text="@string/avengers_genre" />

        <ImageView
            android:id="@+id/first_star"
            android:src="@drawable/ic_star_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/genre"
            app:layout_constraintEnd_toStartOf="@+id/second_star" />

        <ImageView
            android:id="@+id/second_star"
            android:src="@drawable/ic_star_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="3.25dp"
            app:layout_constraintStart_toEndOf="@id/first_star"
            app:layout_constraintTop_toBottomOf="@id/genre"
            app:layout_constraintEnd_toStartOf="@+id/third_star" />

        <ImageView
            android:id="@+id/third_star"
            android:src="@drawable/ic_star_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="3.25dp"
            app:layout_constraintStart_toEndOf="@id/second_star"
            app:layout_constraintTop_toBottomOf="@id/genre"
            app:layout_constraintEnd_toStartOf="@+id/four_star" />

        <ImageView
            android:id="@+id/four_star"
            android:src="@drawable/ic_star_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="3.25dp"
            app:layout_constraintStart_toEndOf="@id/third_star"
            app:layout_constraintTop_toBottomOf="@id/genre"
            app:layout_constraintEnd_toStartOf="@+id/fifty_star" />

        <ImageView
            android:id="@+id/fifty_star"
            android:src="@drawable/ic_star_icon_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="3.25dp"
            app:layout_constraintStart_toEndOf="@id/four_star"
            app:layout_constraintTop_toBottomOf="@id/genre"
            app:layout_constraintEnd_toStartOf="@+id/reviews_count" />

        <TextView
            android:id="@+id/reviews_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/fifty_star"
            android:text="@string/reviews_count"
            android:textStyle="bold"
            android:layout_marginStart="8.89dp"
            android:textColor="@color/avengers_gray"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <TextView
            android:id="@+id/storyline"
            android:paddingTop="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/reviews_count"
            android:text="@string/storyline"
            style="@style/WhiteBoldText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/storyline_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/storyline_content"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:alpha="0.75"
            android:layout_marginTop="12dp"
            android:lineSpacingMultiplier="1.3"
            app:layout_constraintTop_toBottomOf="@id/storyline"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cast"
            android:layout_marginTop="24dp"
            style="@style/WhiteBoldText"
            app:layout_constraintTop_toBottomOf="@+id/storyline_content"
            app:layout_constraintStart_toEndOf="@id/guideline_left" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/cast_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/cast" />

        <ImageView
            android:id="@+id/robert_dj"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/robert_dj"
            android:layout_marginTop="7dp"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/cast_start"
            app:layout_constraintEnd_toStartOf="@id/chris_evans"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:adjustViewBounds="true" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/robert_dj"
            app:layout_constraintStart_toStartOf="@id/robert_dj"
            app:layout_constraintEnd_toEndOf="@id/robert_dj"
            android:text="@string/robert_dj"
            style="@style/ActorNameText" />

        <ImageView
            android:id="@+id/chris_evans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/chris_evans"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            app:layout_constraintStart_toEndOf="@id/robert_dj"
            app:layout_constraintTop_toBottomOf="@id/cast_start"
            app:layout_constraintEnd_toStartOf="@id/mark_ruffalo"
            android:adjustViewBounds="true" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/chris_evans"
            app:layout_constraintStart_toStartOf="@id/chris_evans"
            app:layout_constraintEnd_toEndOf="@id/chris_evans"
            android:text="@string/chris_evans"
            style="@style/ActorNameText" />

        <ImageView
            android:id="@+id/mark_ruffalo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/mark_ruffalo"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            app:layout_constraintStart_toEndOf="@id/chris_evans"
            app:layout_constraintTop_toBottomOf="@id/cast_start"
            app:layout_constraintEnd_toStartOf="@id/chris_hemsworth"
            android:adjustViewBounds="true" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/mark_ruffalo"
            app:layout_constraintStart_toStartOf="@id/mark_ruffalo"
            app:layout_constraintEnd_toEndOf="@id/mark_ruffalo"
            android:text="@string/mark_ruffalo"
            style="@style/ActorNameText" />

        <ImageView
            android:id="@+id/chris_hemsworth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/chris_hemsworth"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            app:layout_constraintStart_toEndOf="@id/mark_ruffalo"
            app:layout_constraintTop_toBottomOf="@id/cast_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            android:adjustViewBounds="true" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/chris_hemsworth"
            app:layout_constraintStart_toStartOf="@id/chris_hemsworth"
            app:layout_constraintEnd_toEndOf="@id/chris_hemsworth"
            android:text="@string/chris_hemsworth"
            style="@style/ActorNameText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
