<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/avengers_bg_black">

        <ImageView
            android:id="@+id/background"
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:background="@drawable/avengers_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_left_arrow"
            android:text="@string/back_button_text"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:textColor="@color/avengers_gray"
            android:textAllCaps="false"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:layout_marginTop="56dp"
            android:layout_marginStart="2dp"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/movies_details_margin_horizontal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/movies_details_margin_horizontal" />

        <TextView
            android:id="@+id/age_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            style="@style/WhiteBoldText"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/age_limit"
            android:layout_marginTop="226dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintTop_toTopOf="@+id/age_limit"
            android:layout_marginTop="12dp"
            style="@style/WhiteBoldText" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_marginTop="4dp"
            android:textColor="@color/avengers_red"
            android:textSize="14sp" />

        <com.iarcuschin.simpleratingbar.SimpleRatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srb_starSize="12dp"
            app:srb_numberOfStars="5"
            app:srb_rating="4"
            app:srb_starBackgroundColor='@color/avengers_gray'
            app:srb_fillColor="@color/avengers_red"
            app:srb_starCornerRadius="6"
            app:srb_starsSeparation="0dp"
            app:srb_drawBorderEnabled="false"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <TextView
            android:id="@+id/reviews_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/rating_bar"
            android:text="@string/reviews_count"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:textColor="@color/avengers_gray"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <TextView
            android:id="@+id/storyline"
            android:paddingTop="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/reviews_count"
            android:text="@string/storyline"
            style="@style/WhiteBoldText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/storyline_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:alpha="0.75"
            android:layout_marginTop="12dp"
            android:lineSpacingMultiplier="1.3"
            app:layout_constraintTop_toBottomOf="@id/storyline"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cast"
            android:layout_marginTop="24dp"
            style="@style/WhiteBoldText"
            app:layout_constraintTop_toBottomOf="@+id/storyline_content"
            app:layout_constraintStart_toEndOf="@id/guideline_left" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actors_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            android:paddingTop="7dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toBottomOf="@id/cast"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@id/guideline_right" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
